unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/bt_base__SCH_Schedule_Delta_Request__c.object-meta.xml
<CustomObject>
    <description>Used to store Delta Request details when API fails, so that process can attempt to retry those.</description>
    <label>Schedule Delta Request</label>
    <nameField>
        <displayFormat>SDR-{0000}</displayFormat>
        <label>Schedule Delta Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedule Delta Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>