unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/fields/bt_base__External_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is combination of Schedule__c + Record_Id, being prepared via backend process.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is combination of Schedule__c + Record_Id, being prepared via backend process.</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>