unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/fields/bt_base__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Record_Id__c</fullName>
    <description>Id of a sObject can relate to different sObjects.</description>
    <inlineHelpText>Id of a sObject can relate to different sObjects.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>