unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/fields/bt_base__Request_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Request_Type__c</fullName>
    <description>Type of request need to submit over API</description>
    <inlineHelpText>Id of a sObject can relate to different sObjects.</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>archived</fullName>
                <label>Archived</label>
            </value>
            <value>
                <fullName>create</fullName>
                <label>Create</label>
            </value>
            <value>
                <fullName>re-calculate</fullName>
                <default>true</default>
                <label>Re-calculate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>