unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/fields/bt_base__Retry_Attempts__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Retry_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Store a number, of how many times requests are retried</description>
    <inlineHelpText>Store a number, of how many times requests are retried</inlineHelpText>
    <label>Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>