unpackaged/main/default/objects/bt_base__SCH_Schedule_Delta_Request__c/fields/bt_base__Schedule__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Schedule__c</fullName>
    <description>The Schedule record for which Delta Request needs to be created</description>
    <inlineHelpText>The Schedule record for which Delta Request needs to be created</inlineHelpText>
    <label>Schedule</label>
    <referenceTo>bt_base__SCH_Schedule__c</referenceTo>
    <relationshipLabel>Schedule Delta Requests</relationshipLabel>
    <relationshipName>Schedule_Delta_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>